test/io/marybeth/testformat-error.good
testformat-error.chpl:1: error: use string.format(args ...) not format(fmt, args ...)
