test/io/marybeth/testformat-error.chpl
writeln(format("##.##", 1.0));
